Opened 15 years ago
Closed 15 years ago
#4813 closed bug (fixed)
Devices - SCSI vendor name
Reported by: | miqlas | Owned by: | marcusoverhagen |
---|---|---|---|
Priority: | low | Milestone: | R1 |
Component: | Drivers/Disk | Version: | R1/Development |
Keywords: | Cc: | dachaac@… | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
I have three IDE devices, one Maxtor, one Samsung, and one Plextor. The vendor names not displayed correctly. Check the shoots...
Attachments (5)
Change History (17)
by , 15 years ago
Attachment: | Maxtor.jpg added |
---|
comment:1 by , 15 years ago
I also noticed that one one machine... Please post the output of 'listdev -d'. Since I get the device attributes in the same way as listdev I expect there to be a problem in the ata/ahci driver.
comment:3 by , 15 years ago
Component: | Applications/Devices → Drivers/Disk |
---|---|
Milestone: | R1 → R1/alpha2 |
Owner: | changed from | to
Priority: | normal → low |
Version: | R1/alpha1 → R1/Development |
Hmm, I looked around for a bit, but it seems to be a bug in the ATA or IDE driver, which sets this information in the kernel Device Manager (a component from which I get the information). I tried looking at where it might go wrong but this is over my head, and I have little time to spare for Haiku until I finish my Master's thesis in April. Therefore I'm reassigning to the right component, hopefully someone can pick it up.
Are you using the ATA or IDE stack?
Hope I set the ticket properties properly, please change if not.
comment:5 by , 15 years ago
I figured something like that, but I was not able to find the source of the problem, and I don't have time at the moment to delve in further. Perhaps you can have a look, if you have time, that is?
comment:6 by , 15 years ago
Sorry, i mistyped the name of my CD/DVD device. It is Pioneer, not "Plextor.jpg". :) Sorry.
by , 15 years ago
Attachment: | bug4813_ata_inquiry_fix.patch added |
---|
Bugfix for ATADevice::Inquiry to byte swap according to ATA string conventions.
comment:8 by , 15 years ago
patch: | 0 → 1 |
---|
comment:9 by , 15 years ago
In order to get all device strings properly into the upper layers mechanism for passing data from driver level to upper levels needs to be changed. But attached patch should fix the problem reported in this bug.
comment:10 by , 15 years ago
Cc: | added |
---|
comment:11 by , 15 years ago
Applied in hrev38547. I let the bug reporter validate, I validated on QEmu.
comment:12 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Closing ticket, based on input from IRC:
[19:45:06] <daChaac> mmadia, rev38611 vmware gcc2hybrid - scsi/vendor : "VMware V", scsi/product : "irtual IDE Hard"... eg. expected output.
maxtor.jpg