Patch from dachaac (bug #4813): Fix ATA vendor and product strings according to ATA string conventions. Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38547 a95241bf-73f2-0310-859d-f6bbb57e9c96